vlib/v/parser/tests/generic_fn_export_err.vv
@[export: "sort_array"]
pub fn sort_array[T](mut arr []T) {
	arr.sort(|a, b| a < b)
}
